--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "clsx": "^2.1.1",
     "konva": "^10.0.8",
     "lucide-react": "^0.552.0",
-    "next": "16.0.1",
+    "next": "^16.1.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-konva": "^19.2.0",
